fix(UI):Window contrast improvement

--- a/public/assets/css/window.css
+++ b/public/assets/css/window.css
@@ -1,5 +1,5 @@
 .lios-window-container {
-  color: var(--white);
+  color: var(--black);
   background: var(--frosted_white);
   overflow: hidden;
 }
